[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sprite/startingScreen.png" type="Texture" id=1]
[ext_resource path="res://src/Levels/main.gd" type="Script" id=2]
[ext_resource path="res://src/Levels/StartingScreen.gd" type="Script" id=3]
[ext_resource path="res://assets/audio/wolfram.tres" type="AudioStream" id=4]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="StartingScreen" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="StartingScreen"]
layer = 2
offset = Vector2( 100, 100 )
transform = Transform2D( 1, 0, 0, 1, 100, 100 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="StartingScreen/CanvasLayer"]
margin_left = -599.0
margin_top = -397.0
margin_right = 2364.0
margin_bottom = 1334.0
color = Color( 0.396078, 0.372549, 0.254902, 1 )

[node name="Label" type="Label" parent="StartingScreen/CanvasLayer"]
modulate = Color( 0.831373, 0.831373, 0.831373, 1 )
margin_right = 40.0
margin_bottom = 14.0
rect_scale = Vector2( 1.5, 1.5 )
text = "FRIENDSGIVING"

[node name="StartButton" type="Button" parent="StartingScreen/CanvasLayer"]
anchor_top = 0.05
anchor_bottom = 0.05
text = "Start"

[node name="L2" type="Button" parent="StartingScreen/CanvasLayer"]
anchor_left = 0.045
anchor_top = 0.05
anchor_right = 0.05
anchor_bottom = 0.05
text = "L2"

[node name="L3" type="Button" parent="StartingScreen/CanvasLayer"]
anchor_left = 0.075
anchor_top = 0.05
anchor_right = 0.075
anchor_bottom = 0.05
text = "L3"

[node name="MuteButton" type="Button" parent="StartingScreen/CanvasLayer"]
anchor_top = 0.09
anchor_bottom = 0.09
text = "Mute"

[node name="QuitButton" type="Button" parent="StartingScreen/CanvasLayer"]
anchor_top = 0.13
anchor_bottom = 0.13
text = "Quit"

[node name="SplashImage" type="Sprite" parent="StartingScreen/CanvasLayer"]
position = Vector2( 287, 175 )
scale = Vector2( 0.607104, 0.607104 )
texture = ExtResource( 1 )

[node name="MenuMusic" type="AudioStreamPlayer" parent="StartingScreen"]
stream = ExtResource( 4 )
volume_db = -5.0
autoplay = true
